# TSwarm

./: package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: FileTree.tsx  TerminalWindow.tsx
